fixed header margin on small devices

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ header {
 
 @media (max-width: 476px) {
 	header {
+		margin-bottom: 0;
 		font-size: 1.4rem;
 	}
 }
